--- a/releases/strimzi-kafka-operator/hr.yaml
+++ b/releases/strimzi-kafka-operator/hr.yaml
@@ -8,7 +8,7 @@ spec:
   targetNamespace: queuing
   chart:
     spec:
-      chart: strimzi/strimzi-kafka-operator
+      chart: strimzi-kafka-operator
       sourceRef:
         kind: HelmRepository
         name: strimzi
