--- a/releases/kafka-cluster/ks.yaml
+++ b/releases/kafka-cluster/ks.yaml
@@ -5,6 +5,8 @@ metadata:
   name: kafka-cluster
   namespace: flux-system
 spec:
+  dependsOn:
+  - name: kafka-operator
   interval: 10m0s
   path: ./releases/kafka-cluster
   prune: true
