--- a/releases/kproducer/ks.yaml
+++ b/releases/kproducer/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: kproducer
   namespace: flux-system
 spec:
-  DependsOn:
+  dependsOn:
   - name: kafka-cluster
   interval: 10m0s
   path: ./releases/kproducer
