--- a/releases/kconsumer/hr.yaml
+++ b/releases/kconsumer/hr.yaml
@@ -13,4 +13,6 @@ spec:
         kind: HelmRepository
         name: mdbdba
   interval: 10m0s
-
+values:
+  podAnnotations:
+    enable.version-checker.io/kconsumer: true
