--- a/releases/kconsumer/hr.yaml
+++ b/releases/kconsumer/hr.yaml
@@ -15,4 +15,4 @@ spec:
   interval: 10m0s
   values:
     podAnnotations:
-      enable.version-checker.io/kconsumer: true
+      enable.version-checker.io/kconsumer: "true"
